[Add] [Scheduler] Name field with constructor support [Add] [Scheduler] toString to include name field [Refactor] [SchedulerThreading] Constructor to accept name argument [Refactor] [SchedulerExecutor] Constructor to accept name argument [Refactor] [SchedulerNoThreading] Constructor to include default name [Fix] [SchedulerTest] Updated test cases to use named Schedulers